# examon-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: flow.mmd  question-schema.json
examon_core/: examon.py
examon_core/application/: default_factory.py
examon_core/application/analysis/: code_analysis_visitor.py  metrics_analyser.py  radon_metrics_analysis.py  simple_difficulty_classifier.py
examon_core/application/decorators/: __init__.py  append_print_decorator.py  choices_decorator.py  decorator_chain.py  difficulty_classification_decorator.py  function_source_enricher.py  metrics_decorator.py  print_function_call.py  print_function_call_decorator.py  print_logs_decorator.py  radon_metrics_decorator.py  remove_python_decorators_decorator.py  remove_wrapper_functions_decorator.py  unique_id_decorator.py  unique_id_enricher.py
examon_core/application/execute/: unrestricted_driver.py
examon_core/application/extract/: function_collector.py
examon_core/entities/: __init__.py  metrics.py  question.py
examon_core/infrastructure/adapters/: json_adapter.py
examon_core/presentation/: cli.py
examon_core/protocols/: __init__.py  code_execution_protocol.py  difficulty_classifier_protocol.py  metrics_analysis_protocol.py  question_decorator_protocol.py  unique_id_generation_protocol.py
examon_core/services/: unique_id_generator.py
tests/: conftest.py
tests/application/: test_default_instance.py  test_question_processor.py
tests/fixtures/: simple_question.py  simple_questions.py
(+17 files in other folders)
